# platoon

./: DEBUGGING.md  PROJECT_GUIDE.md  README.md  TURTLEBOT3_HARDWARE_SETUP.md
btp_pkg/: CMakeLists.txt  package.xml
platoon/: CMakeLists.txt  package.xml
platoon_control/: CMakeLists.txt  package.xml
platoon_control/launch/: platoon_control.launch.py
platoon_control/params/: platoon_control.yaml
platoon_control/src/: lane_changing.py
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/launch/: bringup.launch.py  bringup_cpp.launch.py  bringup_py.launch.py  ld08.launch.py  publish_ns_trajectory.launch.py  robot_bringup.launch.py  robot_state_publisher.launch.py
robot_bringup/param/: burger.yaml  ns_trajectory.yaml  waffle.yaml  waffle_pi.yaml
robot_bringup/src/: initial_pose_publisher.py  initial_pose_publisher_cpp.cpp  ns_robot_trajectory_node.py  robot_trajectory_node.py  update_ns_param.py
robot_teleop/: CMakeLists.txt  package.xml
robot_teleop/src/: multi_teleop_keyboard.py  teleop_keyboard.py
updated_turtlebot3_node/: CMakeLists.txt  package.xml
updated_turtlebot3_node/include/updated_turtlebot3_node/: odometry.hpp  turtlebot3.hpp
updated_turtlebot3_node/include/updated_turtlebot3_node/sensors/: joint_state.hpp
updated_turtlebot3_node/param/: burger.yaml  waffle.yaml
updated_turtlebot3_node/src/: node_main.cpp  odometry.cpp  turtlebot3.cpp
updated_turtlebot3_node/src/sensors/: joint_state.cpp
