<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>platoon</name>
  <version>0.0.0</version>
  <description>Packages used to implement platoon control on turtlebot3 robots</description>
  <maintainer email="mohit1@ph.iitr.ac.in">mohit</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>

  <exec_depend>robot_bringup</exec_depend>
  <exec_depend>robot_teleop</exec_depend>
  <exec_depend>updated_turtlebot3_node</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
